--- a/README
+++ b/README
@@ -43,12 +43,49 @@ Code Usage
 
 Sample Python Code:
 
-    ```
     import ksmtp
     ksmtp.send(to="test@test.com",
                subject="subject",
                body="some message")
-    ```
+
+Sample Config
+=============
+
+/etc/ksmtp.conf:
+
+```
+[ksmtp]
+
+## from email address
+from = username@gmail.com
+
+## user
+user = username@gmail.com
+
+## password
+pass = password
+
+## server
+server = smtp.gmail.com
+
+## port
+port = 465
+#port = 587
+
+## secure
+secure = ssl
+#secure = tls
+
+
+## default to email address (if none specified)
+#to = user@domain.com
+
+## default catch-all (always CC)
+#catch-all = user@domain.com
+
+## default subject
+#subject = default test subject
+```
 
 Issues
 ======
@@ -57,4 +94,6 @@ Gmail:
 If you get an "smtplib.SMTPAuthenticationError" and your credentials are
 correct, you may need to "allow less secure apps access" to your account.
 See https://support.google.com/accounts/answer/6010255
+
+
 
